--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -1,6 +1,57 @@
 @import 'variables.scss';
 
 .news {
-  grid-column: 4 / 6;
-  grid-row: 1 / 3;
+  display: grid;
+  grid-column: 1 / 3;
+  grid-row: 4 / 6;
+  height: 540px;
+  margin: 38px 0 36px 100px;
+  padding: 38px;
+  text-align: center;
+  background-color: #F8F9FA;
+  background-image: url(../images/coffee.png);
+  background-repeat: no-repeat;
+  background-position: center;
+  border-radius: $default;
+  &-head {
+    &__date {
+      font-family: $ff;
+      font-size: 12px;
+      color: #C2C2C4;
+    }
+    &__title {
+      font-family: $ff;
+      font-size: 24px;
+      color: #4E4F53;
+      padding: 15px 0;
+    }
+    &__info {
+      margin: 15px 0;
+      font-family: $ff;
+      font-size: 14px;
+      color: #7F8187;
+      text-align: center;
+      line-height: 24px;
+    }
+  }
+
+  &-foot {
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+    &__btn {
+    text-align: center;
+    padding: 10px 0 0 0;
+		background: #478CBA;
+		font-family: $ff;
+		font-size: 14px;
+		color: #FFFFFF;
+    width: 120px;
+    height: 25px;
+		text-decoration: none;
+    border-radius: $btn-r;
+    line-height: 19px;
+    cursor: pointer;
+    }
+  }
 }
