--- a/src/styles/shoplist.scss
+++ b/src/styles/shoplist.scss
@@ -31,7 +31,12 @@
         border-bottom: 1px solid #D8D8D8;
         &__main  {
           &-img {
-            margin-right: 20px;   
+            background-image: url(../images/orange.svg);
+            background-repeat: no-repeat;
+            background-position: center;
+            height: 60px;
+            width: 80px; 
+            display: inline-block;
           }
           &-info {
             font-size: 16px;
