--- a/src/styles/btn.scss
+++ b/src/styles/btn.scss
@@ -4,9 +4,8 @@
   text-decoration: none;
   border-radius: 4px;
   text-align: center;
-  padding: 10px 0 0 0;
   background-color: #8BC058;
-  font-family: $ff;
+  font-family: $default-font-family;
   font-size: 14px;
   color: white;
   width: 94px;
