--- a/src/styles/mystery-dish.scss
+++ b/src/styles/mystery-dish.scss
@@ -15,20 +15,20 @@
     justify-content: space-between;
     height: 440px;
     padding: 34px 0 0 30px;
-    font-family: $ff;
+    font-family: $default-font-family;
     color: #FFFFFF;
     &-title {
       &__headline {
         margin-bottom: 5px;
       }
       &__headline-second {
-        font-family: $ff;
+        font-family: $default-font-family;
         font-size: 16px;
         color: #C6DDEE;
         opacity: 0.7;
       }
       &__headline-time {
-        font-family: $ff;
+        font-family: $default-font-family;
         font-size: 16px;
         color: #BCEC8F;
         margin-top: 15px  
@@ -43,7 +43,7 @@
       background: #ECC30A;
       border-top-left-radius: $btn-r;
       border-bottom-left-radius: $btn-r;
-      font-family: $ff;
+      font-family: $default-font-family;
       font-size: 18px;
       &__icon {
         padding-right: 13px;
@@ -56,7 +56,7 @@
     display: flex;
     align-items: center;
     &-number {
-      font-family: $ff;
+      font-family: $default-font-family;
       font-size: 28px;
       color: #8BC058;
       background-image: url(../images/bg-mystery-number.svg);
@@ -72,7 +72,7 @@
       
     }
     &-info {
-      font-family: $ff;
+      font-family: $default-font-family;
       font-size: 14px;
       color: #7F8187;
       line-height: 24px;
