--- a/src/styles/news.scss
+++ b/src/styles/news.scss
@@ -13,7 +13,7 @@
   &-head {
     text-align: center;
     &__date {
-      font-family: $ff;
+      font-family: $default-font-family;
       font-size: 12px;
       color: #C2C2C4;
     }
@@ -28,7 +28,7 @@
       }
     }
     &__info {
-      font-family: $ff;
+      font-family: $default-font-family;
       font-size: 14px;
       color: #7F8187;
       line-height: 24px;
@@ -40,18 +40,10 @@
     align-items: flex-end;
     justify-content: center;
     &__btn {
-    text-align: center;
-    padding: 10px 0 0 0;
 		background: #478CBA;
-		font-family: $ff;
-		font-size: 14px;
-		color: #FFFFFF;
+		font-family: $default-font-family;
     width: 120px;
-    height: 25px;
-		text-decoration: none;
-    border-radius: $btn-r;
-    line-height: 19px;
-    cursor: pointer;
+    padding: 10px 0 0 0;
     &:hover {
       opacity: 0.9;
     }
