--- a/src/styles/offer.scss
+++ b/src/styles/offer.scss
@@ -15,7 +15,7 @@
     justify-content: center;
     width: 450px;
     &__date {
-      font-family: $ff;
+      font-family: $default-font-family;
       font-size: 12px;
       color: #C2C2C4;
     }
@@ -53,16 +53,7 @@
 		}
     }
     &__btn {
-      text-align: center;
       padding: 10px 0 0 0;
-      background: #8BC058;
-      font-family: $ff;
-      font-size: 14px;
-      color: #FFFFFF;
-      width: 94px;
-      height: 28px;
-      text-decoration: none;
-      border-radius: $btn-r;
     }
   }
 }
