--- a/src/styles/shoplist.scss
+++ b/src/styles/shoplist.scss
@@ -9,13 +9,13 @@
   display: flex;
   flex-direction: column;
   &-title {
-    font-family: $ff;
+    font-family: $default-font-family;
     font-size: 24px;
     color: #4E4F53;
   }
   &-table {
     margin-top: 20px;
-    font-family: $ff;
+    font-family: $default-font-family;
     height: 250px;
     border-collapse: collapse;
     &__head {
@@ -57,7 +57,7 @@
           }
         }
         &__price {
-          font-family: $ff;
+          font-family: $default-font-family;
           font-size: 18px;
           color: #478CBA;
         }
@@ -69,9 +69,13 @@
     &__agree {
       box-shadow: 0 2px 4px #7F8187;
       margin-right: 15px;
+      height: 35px;
+      width: 110px;
     }
     &__disagree {
       background-color: #A7A7A7;
+      height: 35px;
+      width: 110px;
     }
    
   }
