--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -1,10 +1,9 @@
 $default-color: #444444;
-$ff: Arial, Helvetica, sans-serif;
-$fs: 24px;
+$default-font-family: Arial, Helvetica, sans-serif;
 $border-color: #444;
 $star-clr: #F8CB69;
 $clr-green: #8BC058;
 $img: url(../images/linguine.png);
 $default: 7px;
 $btn-r: 4px;
-$cng-btn: #B8C0C9;
+$btn-grey-color: #B8C0C9;
