--- a/src/styles/voting.scss
+++ b/src/styles/voting.scss
@@ -13,7 +13,7 @@
   background-repeat: no-repeat;
   background-position: right bottom;
   &-title {
-    font-family: $ff;
+    font-family: $default-font-family;
     font-size: 24px;
     color: #FFFFFF;
   }
@@ -34,7 +34,7 @@
       }
     }
     &__text {
-      font-family: $ff;
+      font-family: $default-font-family;
       font-size: 16px;
       color: #FFFFFF;
       line-height: 20px;
