--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -5,5 +5,5 @@ $star-clr: #F8CB69;
 $clr-green: #8BC058;
 $img: url(../images/linguine.png);
 $default: 7px;
-$btn-r: 4px;
+$btn-radius: 4px;
 $btn-grey-color: #B8C0C9;
