--- a/src/styles/shoplist.scss
+++ b/src/styles/shoplist.scss
@@ -22,32 +22,19 @@
       font-size: 12px;
       color: #A7A7A7;
       border-bottom: 1px solid #D8D8D8;
-      &-main {
-      }
     }
-    &__body {
-      &-line {
+    
+      &__row {
         border-bottom: 1px solid #D8D8D8;
-        &__main  {
-          &-img {
-            background-image: url(../images/orange.svg);
-            background-repeat: no-repeat;
-            background-position: center;
-            height: 60px;
-            width: 80px; 
-            display: inline-block;
-          }
           &-info {
             font-size: 16px;
             color: #4E4F53;
             display: inline-block;
-            &-scnd {
+            &-price{
               font-size: 12px;
               color: #7F8187;
             }
           }
-        }
-        &__qty {
           &-btn {
             border: none;
             cursor: pointer;
@@ -55,15 +42,13 @@
           &-nmbr {
             margin: 0 10px;
           }
-        }
-        &__price {
+        &-price {
           font-family: $default-font-family;
           font-size: 18px;
           color: #478CBA;
         }
       }
     }
-  }
   &-btn {
     margin-top: 20px;
     &__agree {
