--- a/src/styles/voting.scss
+++ b/src/styles/voting.scss
@@ -5,9 +5,7 @@
   grid-column: 1 / 3;
   grid-row: 2 / 4;
   border-radius: $default;
-  margin: 38px 0 0 100px;
   padding: 34px 0 0 30px;
-  height: 280px;
   background: #ECC30A;
   background-image: url(../images/bg-img-voting.png);
   background-repeat: no-repeat;
@@ -16,6 +14,7 @@
     font-family: $default-font-family;
     font-size: 24px;
     color: #FFFFFF;
+    margin: 0;
   }
   &-item {
     display: flex;
